# 8-PuzzleSimpleSolver

./: CMakeLists.txt  README.md
Engine/: CMakeLists.txt
Engine/Include/Engine/: Heuristic.hpp  Puzzle.hpp  PuzzleSolver.hpp
Engine/Include/Engine/Platform/: Platform.hpp  Types.hpp
Engine/Include/Engine/Utils/: Assertion.hpp  Log.hpp
Engine/Source/: Heuristic.cpp  Puzzle.cpp  PuzzleSolver.cpp  StateNode.cpp  StateNode.hpp  StateTree.cpp  StateTree.hpp
Engine/Source/Frontier/: Frontier.cpp  Frontier.hpp
Engine/Source/Utils/: Error.cpp  Error.hpp  Log.cpp
Prebuilt/: PREBUILT.txt
Prebuilt/Linux-amd64/: oops.txt
Source/: CMakeLists.txt  Main.cpp  main.cpp
Source/Case/: CaseManager.cpp  CaseManager.hpp
Source/Input/: FileParser.cpp  FileParser.hpp
Source/Shell/: Console.cpp  Console.hpp  Interface.hpp
Source/Utility/: Logging.hpp
Tests/: CMakeLists.txt  CMakeLists.txt.txt
Tests/Exact/: CMakeLists.txt  Main.cpp
Tests/Logging/: CMakeLists.txt  Main.cpp
